--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -47,8 +47,7 @@ button:not([disabled]) {
 }
 .notyf {
   cursor: pointer;
-  padding-bottom: env(safe-area-inset-bottom, 0px) !important;
-  margin-bottom: 1rem !important;
+  padding-bottom: calc(1rem + env(safe-area-inset-bottom, 0px)) !important;
 }
 .notyf__dismiss-btn {
   border: none !important;
